# O-Positive

./: .gitignore  PR_FRIENDS_NUDGES.md  README.md  package-lock.json  package.json  pyproject.toml  server.js  workout_agent.py
backend/: .env  .env.example  COMPLETION_REPORT.md  DATABASE_ERD.md  DB_SCHEMA.md  MIGRATIONS_GUIDE.md  MIGRATION_SUMMARY.md  QUERIES.sql  README_DATABASE.md  START_HERE.md  index.js  migrate.js  package-lock.json  package.json  server.js  setup.sh
backend/__tests__/: calories.test.js  friends.api.test.js  schema.test.js
backend/agent/: api.py  test_agent.py  workout_agent.py
backend/db/: connection.js  examples.js
backend/migrations/: 001_create_initial_schema.js  index.js
backend/routes/: user.py
backend/seeds/: workouts.js
frontend/: app.js  index.html  package-lock.json  styles.css
frontend/src/: App.css  App.js  index.css
frontend/src/__tests__/: CaloriesScreen.test.js
frontend/src/screens/: CaloriesScreen.css  CaloriesScreen.js  FriendsScreen.js  HomeScreen.js  ProfileScreen.js  WorkoutsScreen.js
public/: index.html  script.js  style.css
